Adding imgs, styling for books, and lots of function

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
             <div class="pagesNumber"></div>
             <div class="readStatus"></div>
         </div>
-        <div class="left-side-dia"></div>
+        <div class="left-side-dia">
+            Books have long served as windows into different worlds, ideas, and experiences. Whether exploring imagined realms, diving into historical events, or analyzing the human condition, every book offers readers a unique journey. This particular work stands as a testament to the power of storytelling and the written word. Through its pages, the author invites us to engage with compelling themes, vivid characters, and thought-provoking questions. As we turn each page, we are not only entertained but also challenged to reflect, learn, and grow. Whether you are reading for pleasure, study, or personal insight, this book promises an experience that lingers well beyond the final chapter.
+        </div>
     </dialog>
 
-    <dialog closedby="closerequest">
-        <button class="view">View</button>
-        <button class="remove">Remove</button>
+    <dialog class="closerDia" closedby="closerequest">
+        <!-- <div class="diaBackground"></div> -->
+        <button class="btn2" id="view">View</button>
+        <button class="btn2" id="remove">Remove</button>
+        <button class="btn2" id="cancel">Cancel</button>
     </dialog>
     
     <script src="book.js"></script>
