add defer to script tag

--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <button class="btn2" id="cancel">Cancel</button>
     </dialog>
     
-    <script src="book.js"></script>
+    <script src="book.js" defer></script>
 </body>
 </html>
